# configurable-agents

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  CONTEXT.md  CONTEXT_v0.1.md  CONTRIBUTING.md  DISCREPANCIES.md  DOCUMENTATION_INDEX.md  Dockerfile.template  INSTALL_GUIDE.md  README.md  RESTORATION_SUMMARY.md  SETUP.md  STREAMLIT_README.md  SYSTEM_PROMPT.md  VERSION_AUDIT.md  changelog_old.md  commit_mapping.md  launch_chat_builder.py  launch_ui.py  md_inventory.json  pyproject.toml  pytest.ini  sample_config.yaml  setup.bat  setup.sh  streamlit_app.py  task_numbering_map.md  tasks_old.md  test_agent.py  test_execute.json  test_register.json  workflows.db-shm  workflows.db-wal
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.planning/: .continue-here.md  MILESTONE-CONTEXT.md  MILESTONES.md  ORCHESTRATOR_COMPLETE.md  ORCHESTRATOR_TEST_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UI_BUG_REPORT.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_V11.md  FEATURES.md  FEATURES_UX.md  PITFALLS.md  STACK.md  SUMMARY.md  SUMMARY_V11.md
docs/: ADVANCED_TOPICS.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  CONTEXT.md  DEPLOYMENT.md  DISCUSSION.md  FLOW_VISUALIZER.md  INTEGRATION_TESTING_FULL.md  MLFLOW_39_DOCUMENTATION_UPDATE_SUMMARY.md  MLFLOW_39_FEATURES.md  MLFLOW_39_MIGRATION_PLAN.md  MLFLOW_39_OBSERVABILITY_DESIGN.md  MLFLOW_39_UPGRADE_GUIDE.md  MLFLOW_39_UPGRADE_SUMMARY.md  MLFLOW_39_USER_MIGRATION_GUIDE.md  OBSERVABILITY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_VISION.md  QUICKSTART.md  README.md  REMAINING_UPDATES.md  ROADMAP.md  SECURITY_GUIDE.md  SPEC.md  TASKS.md  TASKS_UPDATE_PLAN.md  TOOL_DEVELOPMENT.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-langgraph-execution-engine.md  ADR-002-strict-typing-pydantic-schemas.md  ADR-003-config-driven-architecture.md  ADR-004-parse-time-validation.md  ADR-005-single-llm-provider-v01.md  ADR-006-linear-flows-only-v01.md  ADR-007-tools-as-named-registry.md  ADR-008-in-memory-state-only-v01.md  ADR-009-full-schema-day-one.md  ADR-010-python-free-export-target.md  ADR-011-mlflow-observability.md  ADR-012-docker-deployment-architecture.md  ADR-013-environment-variable-handling.md  ADR-014-three-tier-observability-strategy.md  ADR-018-mlflow-39-upgrade-genai-tracing.md  ADR-019-litellm-integration.md  ADR-020-agent-registry.md  ADR-023-memory-backend.md
docs/api/: conf.py  config.md  core.md  index.md  llm.md  observability.md  runtime.md  tools.md
docs/bugs/: BUG-002-server-template-wrong-function.md  BUG-004-mlflow-blocking-without-server.md
docs/development/: ARCHITECTURE.md  CLI_VERIFICATION_REPORT.md  OBSERVABILITY_REFERENCE.md  OPTIMIZATION_INVESTIGATION.md  PROJECT_VISION.md  SPEC.md  TASKS.md  UI_ARCHITECTURE.md  UI_DESIGN_SPEC.md  UI_PAGES_DESIGN.md  UI_REDESIGN_ANALYSIS.md
docs/implementation_logs/: README.md
docs/user/: ADVANCED_TOPICS.md  DEPLOYMENT.md  OBSERVABILITY.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  TROUBLESHOOTING.md  cli_guide.md
examples/: README.md  article_writer.yaml  article_writer_README.md  article_writer_mlflow.yaml  echo.yaml  echo_README.md  memory_example.yaml  mlflow_optimization.yaml  mlflow_optimization_README.md  nested_state.yaml  nested_state_README.md  sandbox_example.yaml  simple_workflow.yaml  tools_example.yaml  type_enforcement.yaml  type_enforcement_README.md
examples/multi_agent_collaboration/: README.md  multi_agent_collaboration.yaml  orchestrator_config.py
examples/performance_tuning/: README.md  baseline.yaml  benchmark.py  performance_tuning.yaml
examples/webhook_integration/: README.md  test_webhook.sh  webhook_integration.yaml
src/configurable-agents/: __init__.py  article_generation_flow.yaml  main.py
src/configurable_agents/: __init__.py  __main__.py  app.py  article_generation_flow.yaml  cli.py  logging_config.py  main.py  server.py  spawner.py  test_visualizer.py
test_configs/: 01_basic_linear.yaml  02_with_observability.yaml  03_multi_node_linear.yaml  04_with_tools.yaml  05_conditional_branching.yaml  06_loop_iteration.yaml  07_parallel_execution.yaml  08_multi_llm.yaml  09_with_memory.yaml  10_with_sandbox.yaml  11_with_storage.yaml  12_full_featured.yaml  README.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_deploy.py  test_cli_deploy_integration.py  test_setup.py
tests/cli/: conftest.py  test_cli_deploy_integration.py  test_cli_integration_comprehensive.py  test_cli_run_integration.py  test_cli_ui_integration.py  test_cli_validate_integration.py  test_optimization_commands.py
tests/config/: test_parser.py  test_schema.py  test_schema_integration.py  test_types.py  test_validator.py
tests/core/: __init__.py  test_control_flow.py  test_graph_builder.py  test_node_executor.py  test_node_executor_metrics.py  test_output_builder.py  test_parallel.py  test_state_builder.py  test_template.py
tests/deploy/: __init__.py  test_generator.py  test_generator_integration.py  test_server_integration.py  test_server_template.py
tests/integration/: __init__.py  conftest.py  test_error_scenarios.py  test_workflows.py
tests/llm/: __init__.py  test_google.py  test_litellm_provider.py  test_provider.py
tests/memory/: __init__.py  test_store.py
tests/observability/: test_bottleneck_analysis.py  test_cli_commands.py  test_cost_estimator.py  test_cost_reporter.py  test_cost_reporter_integration.py  test_mlflow_integration.py  test_mlflow_tracker.py  test_multi_provider_tracker.py  test_profiler.py
tests/optimization/: test_ab_test.py  test_evaluator.py  test_gates.py
tests/orchestrator/: test_client.py  test_service.py
tests/registry/: __init__.py  test_client.py  test_server.py  test_ttl_expiry.py
tests/runtime/: __init__.py  test_executor.py  test_gates.py  (+3 more)
(+344 files in other folders)
