[project]
name = "configurable_agents"
version = "0.1.0"
description = "configurable agents using crewAI"
authors = [{ name = "Yogesh Singh", email = "yogesh.singh893@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "gradio>=6.3.0",
    "langchain-google-genai>=2.0.0",
    "streamlit>=1.53.0",
    "streamlit-mermaid>=0.3.0",
]

[project.scripts]
kickoff = "configurable_agents.main:kickoff"
run_crew = "configurable_agents.main:kickoff"
plot = "configurable_agents.main:plot"
run_with_trigger = "configurable_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.hatch.build.targets.wheel]
packages = ["src/configurable_agents"]
