[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configurable-agents"
version = "0.1.0-dev"
description = "Config-driven LLM agent workflows - Transform YAML into production-grade agent systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yogesh Kumar Singh", email = "yogesh.singh893@gmail.com"}
]
keywords = ["llm", "agents", "workflow", "langchain", "langgraph", "config-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.0",
    "litellm>=1.80.0",
    "python-dotenv>=1.0.0",
    "mlflow>=3.9.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.30.0",
    "rich>=13.0.0",
    "restrictedpython>=6.0",
    "func-timeout>=4.3.5",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
ui = [
    "streamlit>=1.30.0",
    "gradio>=4.0.0",
]
chat = [
    "gradio>=4.0.0",
]
webhooks = [
    "aiogram>=3.0.0",
    "httpx>=0.26.0",
]
sandbox = [
    "docker>=7.0.0",
]

[project.scripts]
configurable-agents = "configurable_agents.cli:main"
"docs:build" = "sphinx-build -b html docs/api docs/api/_build"
"docs:serve" = "python -m http.server 8000 --directory docs/api/_build"
"docs:clean" = "python -c \"import shutil, pathlib; shutil.rmtree(pathlib.Path('docs/api/_build'), ignore_errors=True) if pathlib.Path('docs/api/_build').exists() else None\""

[project.urls]
Homepage = "https://github.com/thatAverageGuy/configurable-agents"
Documentation = "https://github.com/thatAverageGuy/configurable-agents/docs"
Repository = "https://github.com/thatAverageGuy/configurable-agents"
Issues = "https://github.com/thatAverageGuy/configurable-agents/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require API keys)",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
